fix: adicionando = que faltou MERCADOPAGO_SECRET

--- a/.env.example
+++ b/.env.example
@@ -58,4 +58,4 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 MERCADOPAGO_KEY=
-MERCADOPAGO_SECRET
+MERCADOPAGO_SECRET=
