fix: alterei nome das variaves de ambientno env.example

--- a/.env.example
+++ b/.env.example
@@ -57,5 +57,5 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-MERCADOPAGO_KEY=
-MERCADOPAGO_SECRET=
+MP_KEY_PUBLIC=
+MP_ACCESS_TOKEN=
